Fix bug where quicklinks drop down was behind the search box.

--- a/sass/navigation/_quicklinks-bar.scss
+++ b/sass/navigation/_quicklinks-bar.scss
@@ -64,6 +64,10 @@
     display: block;
   }
 
+  .quick-menu .sub-menu li a:hover {
+    background: lighten($color__blue, 20%) !important;
+  }
+
 }
       
   @media (min-width: 1320px) {
