--- a/sass/site/secondary/_header.scss
+++ b/sass/site/secondary/_header.scss
@@ -100,6 +100,7 @@
 #header .nav-area {
 	transition: all 0.25s ease;
 	top: 105px;
+  z-index: 10;
 
   @include bp-small {
     position: relative;
